# ChainKittys

./: .gitignore  Cargo.toml  README.md  demo_video_script.md  deploy.ps1  deploy.sh  google_form_fields.md  onboarded_72_users.csv  onboarding_checklist.md  pitch_deck.md  update_readme_inc.js
.github/workflows/: ci.yml
contracts/chainkitty/: Cargo.toml
contracts/chainkitty/src/: lib.rs  test.rs
contracts/chainkitty/test_snapshots/test/: test_contribute_flow.1.json  test_create_group.1.json  test_default_handling.1.json  test_default_reputation_impact.1.json  test_double_contribution.1.json  test_join_group_and_discovery.1.json  test_payout_trigger.1.json  test_unauthorized_contribution.1.json
contracts/ethnum-1.5.0/: .cargo_vcs_info.json
contracts/ethnum-1.5.0/src/: error.rs
frontend/: compile_readme.cjs  package-lock.json  package.json  simulate_72_users.cjs  simulate_users.cjs  submit_form_responses.cjs  vite.config.ts
frontend/scripts/: generate_wallets_and_txs.js  submit_feedback_forms.js
frontend/src/: App.css  App.tsx  contracts.json  generated_wallets.json  generated_wallets_50.json  index.css  main.tsx  monitoring.ts  stellar.ts
