[workspace]
resolver = "2"
members = [
    "contracts/chainkitty",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
debug-assertions = false
overflow-checks-std = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[patch.crates-io]
ethnum = { path = "contracts/ethnum-1.5.0" }

